# NextStudy

./: start_nextstudy_macos_tahoe.command  start_nextstudy_windows.bat
new/: DOKUMENTATION_index.md  DOKUMENTATION_index_neu.md  NextStudy_Lite_Projektbeschreibung.md  index.py  nextstudy_export.txt  nextstudy_plan.json
nextstudy/: cli.py  models.py
old/: .gitignore  README.md  main.py  pyproject.toml
old/docs/: NextStudy_Projektbeschreibung.md
old/nextstudy/: __init__.py  gui.py  planner.py  storage.py
old/tests/: __init__.py  test_storage.py
tests/: test_planner.py
