[project]
name = "nextstudy"
version = "1.0.0"
description = "Ein professionell strukturiertes Python-Tool zur Erstellung persönlicher Lernpläne."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
nextstudy = "nextstudy.gui:main"
nextstudy-cli = "nextstudy.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
